# space-game

./: .gitignore  CMakeLists.txt  README.md  space-game.gyp
cmake_modules/: FindGLM.cmake
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
