CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
PROJECT(space-game)

set(CMAKE_MODULE_PATH ${space-game_SOURCE_DIR}/cmake_modules ${CMAKE_MODULE_PATH})
 
ADD_EXECUTABLE(space-game src/main.cpp)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(GLM REQUIRED)

INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(space-game ${SDL2_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES})